とりあえず

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = custom
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
@@ -271,3 +271,14 @@ platform    = atmelavr
 board       = megaatmega2560
 build_flags = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 src_filter  = +<src/MarlinCore.cpp>
+
+[env:custom]
+platform           = ${common_stm32.platform}
+extends  = stm32_variant
+board = marlin_STM32F407VGT6_CCM
+; board_build.offset = 0x8007000
+board_build.variant         = MARLIN_F4x7Vx
+debug_tool      = stlink
+debug_build_flags = -O0 -g -ggdb
+build_flags        = ${stm32_variant.build_flags}
+                     -DSTM32F407_5VX
